add style darkReader in index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Interface Refonte</title>
+    <link rel="stylesheet" href="style/darkReader.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/modules.css">
 </head>
