--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />git 
     <title>Interface Refonte</title>
     <link rel="stylesheet" href="style/darkReader.css">
     <link rel="stylesheet" href="style/style.css">
