--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />git 
+    <meta charset="utf-8" />
     <title>Interface Refonte</title>
     <link rel="stylesheet" href="style/darkReader.css">
     <link rel="stylesheet" href="style/style.css">
@@ -13,13 +13,6 @@
     <div class="root"></div>
 
     <script src="scriptLoader.js"></script>
-    <!-- <script src="js/domFunction.js"></script>
-
-    <script src="js/oscillator.js"></script>
-    <script src="js/oscillatorDom.js"></script>
-    
-    <script src="js/SynthLine.js"></script>
-    <script src="js/main.js"></script> -->
 
 </body>
 </html>
